crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@completes_expression_in_subroutine_body.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/completes_expression_in_subroutine_body.v
---
[
    CompletionItem {
        label: "px_in",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "px_in",
                del: 112..114,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "px_inner",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "px_inner",
                del: 112..114,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "px_local",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "px_local",
                del: 112..114,
            },
        ),
        snippet_edit: None,
    },
]
