crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@completes_expression_system_functions.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/completes_expression_system_functions.v
---
[
    CompletionItem {
        label: "$clog2",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "$clog2()",
                del: 29..32,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "\\$clog2(${1:args})",
                del: 29..32,
            },
        ),
    },
]
