crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@completes_first_ordered_param_assign_at_token_end.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
assertion_line: 188
expression: items
input_file: crates/ide/src/completion/engine/fixtures/completes_first_ordered_param_assign_at_token_end.v
---
[
    CompletionItem {
        label: "P4",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "P4",
                del: 137..138,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "P8",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "P8",
                del: 137..138,
            },
        ),
        snippet_edit: None,
    },
]
