crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@completes_initializer_expression.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/completes_initializer_expression.v
---
[
    CompletionItem {
        label: "P",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "P",
                del: 37..37,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "a",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "a",
                del: 37..37,
            },
        ),
        snippet_edit: None,
    },
]
